src/mobius.esc/escjava/tags/escjava-2-0a3/ESCTools/Javafe/test/javafe/test/fe/test19/FromFinal.java
package foo.bar;

final class B {}

class A extends B {}		// error
